# gfo

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.ja.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.ja.md  README.md  REVIEW.md  SECURITY.md  build_mo.py  hatch_build.py  mise.toml  pyproject.toml  review-1.md  review-2.md  review-3.md  review-4.md  review-5.md  review-6.md  review-7.md  review-diff.txt
.claude/rules/: 01-exceptions.md  02-adapter-common.md  03-github.md  04-gitlab.md  05-bitbucket.md  06-azure-devops.md  07-backlog.md  08-gitea-family.md  09-config-auth.md  10-testing.md
.claude/skills/bump-version/: SKILL.md
.claude/skills/deploy/: SKILL.md
.claude/skills/integration-test/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/test/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  release.yml
docs/: api-expansion-plan.md  authentication.ja.md  authentication.md  azure-devops-spec.md  backlog-spec.md  bitbucket-spec.md  cli-alignment.md  cli-comparison.md  commands.ja.md  commands.md  design-decisions.md  design.md  feature-gap-analysis.md  gitbucket-spec.md  gitea-spec.md  github-spec.md  gitlab-spec.md  integration-testing.ja.md  integration-testing.md  issues.md  plan.md  retro.md  review-1-src.md  review-2-tests.md  review-3-docs.md  review-4.md  review-5.md  review-claude-src.md  review-claude-tests.md  review-claude.md  review-tasks.md  review.md  roadmap.md  spec.md  tasks.md  todo.md  unsupported.md
docs/reviews/: review-02-core-bugs.md  review-03-adapter-accuracy.md  review-04-input-validation.md  review-05-security.md  review-06-test-coverage.md  review-07-edge-cases.md  review-08-code-quality.md  review-09-followup.md  review-10-followup2.md  review-11-followup3.md  review-12-adapters.md  review-13-detect-gitea-tests.md  review-14-http-config-output.md  review-15-git-util-http-commands.md  review-16-http-config-auth.md  review-17-auth-adapters-tests.md  review-18-gitbucket-azure-auth-output.md  review-19-commands-cli-detect.md  review-20-gogs-forgejo-gitea-bitbucket-auth.md  review-21-gitlab-gitbucket-http-tests.md  review-22-github-backlog-azure-auth.md  review-23-exceptions-output-cli-config.md  review-24-auth-commands-detect-http.md  review-25-azure-http-gitea-base.md  review-26-github-gitlab-bitbucket-backlog-http.md  review-27-gitea-gogs-base-auth-cmd.md  review-28-forgejo-gitbucket-azure-commands.md  review-29-detect-config-cli-output-git-util.md  review-30-github-gitlab-backlog-http.md  review-31-commands-base-exceptions.md  review-32-commands-strip-consistency.md  review-33-backlog-bitbucket-azure-url-encode.md  review-34-gogs-git-util.md  review-35-auth-config-output.md  review-36-adapters-base-gitlab-github.md  review-37-issue-updated-at.md  review-38-azure-backlog-detect-gitutil.md  review-39-commands-repo-release.md  review-40-init-label-test.md  review-41-list-repositories-url-encode.md  (+3 more)
docs/roadmap/: 01-browse.md  02-jq-filter.md  03-ssh-key.md  04-org.md  05-notification.md  06-branch-protect.md  07-secret-variable.md  1-rename-update-to-edit.md  2-move-comment-to-subcommand.md  3-move-review-to-subcommand.md  4-merge-method-to-flags.md  5-add-web-option.md  6-pr-create-options.md  7-release-create-target.md  8-auth-logout.md  8-auth-multi-account.md  9-auth-logout.md  README.md  cli-target-options.md  phase1-crud-completion.md  phase2-pr-operations.md  phase3-release-repo.md  phase4-ci-security-org.md  phase5-issue-search-niche.md  phase6-future-vision.md
src/gfo/: __main__.py  _context.py  auth.py  cli.py  config.py  detect.py  exceptions.py  git_util.py  http.py  i18n.py  output.py
src/gfo/adapter/: __init__.py  _helpers.py  azure_devops.py  backlog.py  base.py  bitbucket.py  forgejo.py  gitbucket.py  gitea.py  github.py  github_like.py  gitlab.py  gogs.py  models.py  registry.py
src/gfo/commands/: __init__.py  api.py  auth_cmd.py  batch.py  branch.py  branch_protect.py  browse.py  ci.py  collaborator.py  comment.py  completion.py  config_cmd.py  deploy_key.py  file.py  gpg_key.py  init.py  issue.py  (+21 more)
tests/: conftest.py  test___main__.py  test_adapter_base.py  test_auth.py  test_azure_devops.py  test_cli.py  test_config.py  test_context.py  test_detect.py  test_exceptions.py  test_git_util.py  test_github.py  test_http.py  test_i18n.py  test_main.py  test_output.py  test_registry.py
tests/integration/: .env.example  base_gitea_family.py  cleanup_saas.py  cli_helper.py  conftest.py  docker-compose.yml  git_askpass_helper.py  run_saas.sh  run_selfhosted.sh  setup_services.py  test_azure_devops.py  test_backlog.py  test_bitbucket.py  test_cli_auth.py  test_cli_ci.py  test_cli_commands.py  test_cli_crud.py  test_cli_smoke.py  test_forgejo.py  test_gitbucket.py  test_gitea.py  test_github.py  test_gitlab.py  test_gogs.py
tests/test_adapters/: conftest.py  test_azure_devops.py  test_backlog.py  test_base.py  test_bitbucket.py  test_branch_protect.py  test_browse.py  test_forgejo.py  test_gitbucket.py  test_gitea.py  test_github.py  test_gitlab.py  test_gogs.py  test_gpg_key.py  test_notification.py  test_org.py  test_registry.py  test_secret_variable.py  test_ssh_key.py  test_tag_protect.py
tests/test_commands/: conftest.py  test_api.py  test_auth_cmd.py  test_batch.py  test_branch.py  test_branch_protect.py  test_browse.py  test_ci.py  test_collaborator.py  test_comment.py  test_completion.py  test_config_cmd.py  test_deploy_key.py  test_error_propagation.py  test_file_cmd.py  test_gpg_key.py  test_init.py  test_issue.py  test_issue_migrate.py  test_issue_template.py  test_issue_update.py  test_label.py  test_milestone.py  test_notification.py  test_org.py  test_package.py  test_pr.py  test_pr_update.py  test_read_file_arg.py  test_release.py  test_repo.py  test_review.py  test_schema.py  test_search.py  test_secret.py  test_service_spec.py  test_ssh_key.py  test_status_cmd.py  test_tag.py  test_tag_protect.py  (+4 more)
tmp/: handoff.md  security-audit-2026-06-20.md  security-audit-copilot-2026-06-20.md
tmp/issues/: 27.json  28.json  29.json  30.json
(+1 files in other folders)
