[project]
name = "gfo"
version = "0.2.0"
description = "Git Forge Operator – a unified CLI for GitHub, GitLab, and more"
license = "0BSD"
requires-python = ">=3.11"
dependencies = ["requests"]
readme = "README.md"
keywords = ["git", "github", "gitlab", "bitbucket", "gitea", "forgejo", "cli", "devops"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Version Control",
]

[project.urls]
Homepage = "https://github.com/prata0x/gfo"
"Source Code" = "https://github.com/prata0x/gfo"

[project.scripts]
gfo = "gfo.cli:main"

[project.optional-dependencies]
dev = ["pytest", "responses", "pytest-cov", "ruff", "bandit", "mypy", "types-requests", "pre-commit"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gfo"]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=gfo --cov-report=term-missing --ignore=tests/integration"
markers = [
    "integration: integration tests requiring live services",
    "saas: integration tests requiring SaaS accounts (GitHub, GitLab, etc.)",
    "selfhosted: integration tests requiring Docker self-hosted services",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]  # 日本語コメント・docstring は行長制限を除外

[tool.bandit]
exclude_dirs = ["tests"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
# 段階的に有効化できるチェック
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
disallow_untyped_defs = false   # 既存コードに型注釈を段階的に追加する際は true に
