[project]
name = "gfo"
dynamic = ["version"]
description = "Git Forge Operator – a unified CLI for GitHub, GitLab, and more"
license = "0BSD"
requires-python = ">=3.11"
dependencies = ["requests"]
readme = "README.md"
keywords = ["git", "github", "gitlab", "bitbucket", "gitea", "forgejo", "cli", "devops"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Version Control",
]

[project.urls]
Homepage = "https://github.com/prata0x/gfo"
"Source Code" = "https://github.com/prata0x/gfo"
Documentation = "https://github.com/prata0x/gfo#readme"
Changelog = "https://github.com/prata0x/gfo/blob/main/CHANGELOG.md"
Issues = "https://github.com/prata0x/gfo/issues"

[project.scripts]
gfo = "gfo.cli:main"

# 開発依存は PEP 735 dependency-groups で管理する。`uv sync` が既定でインストールし、
# Dependabot も development 依存として正しく分類・グルーピングできる。
[dependency-groups]
dev = ["pytest", "responses", "pytest-cov", "pytest-xdist", "ruff", "bandit", "mypy", "types-requests", "pre-commit"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/gfo/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/gfo"]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
# カバレッジは addopts に焼き込まない (計測オーバーヘッドが支配的で開発ループを毎回重くするため)。
# 開発時の `uv run pytest` は cov 無し = 高速。カバレッジ計測は明示的に付与する:
#   ローカル / test スキル: `uv run pytest --cov=gfo --cov-report=term-missing -n auto`
#   CI: `uv run pytest -n 4 --cov=gfo --cov-report=term-missing`
addopts = "--ignore=tests/integration --durations=10"
# 走査対象外 (collection 高速化・誤検出回避)。
norecursedirs = ["tmp", ".venv", ".git", "*.egg", "build", "dist"]
markers = [
    "integration: integration tests requiring live services",
    "saas: integration tests requiring SaaS accounts (GitHub, GitLab, etc.)",
    "selfhosted: integration tests requiring Docker self-hosted services",
    "cli: CLI integration tests (argparse -> handler -> adapter -> output)",
    "slow: slow tests (CI pipelines, network-heavy operations)",
]

# xdist (並列ワーカー) × coverage 併用のための設定。
# parallel = true で各ワーカーの計測を別ファイルに記録し combine 可能にする。
# relative_files = true で worker の作業パス差を吸収する (未設定だと CI で 0% 化する)。
# `coverage run -m pytest` は使わず `pytest --cov ... -n ...` 形式で計測する。
[tool.coverage.run]
source = ["gfo"]
parallel = true
relative_files = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# B = flake8-bugbear (実バグ検出。特に B904 = except 内 raise の例外連鎖を強制)
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # 日本語コメント・docstring は行長制限を除外

[tool.bandit]
exclude_dirs = ["tests"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = true
# strict に含まれない追加チェック
warn_unreachable = true
